# discret_maths

./: .gitignore  pyproject.toml
discret_maths/: utils.py
discret_maths/relations/: __init__.py  check.py  extract.py  transform.py
discret_maths/utils/: __init__.py  logger.py
test/: conftest.py
test/relations/: __init__.py  test_check.py  test_extract.py  test_init.py
